PR/40386: M. Levinson: vi(1) filename completion no longer works, fix bug introduced by shadow variable fix.